@@ -1,11 +1,11 @@
 package com.axelor.utils.helpers;
 
+import jakarta.annotation.Nonnull;
+import jakarta.annotation.Nullable;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 
 public class ListHelper {
 
@@ -44,6 +44,6 @@ public class ListHelper {
     if (list == null || list.isEmpty()) {
       return Optional.empty();
     }
-    return Optional.ofNullable(list.get(0));
+    return Optional.ofNullable(list.getFirst());
   }
 }
